[package]
name = "aosp-missing-blobs"
version = "0.5.0"
authors = ["Josh Choo <dev@joshuous.com>"]
edition = "2018"
description = """
A tool to identify required blobs (.so) that are missing from AOSP ROM builds, and to show which existing blobs depend on them.
"""
license = "MIT"
documentation = "https://github.com/joshuous/aosp-missing-blobs"
homepage = "https://github.com/joshuous/aosp-missing-blobs"
repository = "https://github.com/joshuous/aosp-missing-blobs"

[dependencies]
clap = "2.33"
goblin = "0.4"
ignore = "0.4"
